--- a/src/components/TextFilePicker/TextFilePicker.css
+++ b/src/components/TextFilePicker/TextFilePicker.css
@@ -2,6 +2,7 @@
     height: calc(100vh - 32px);
     width: 30vw;
     max-width: 300px;
+    min-width: 260px;
     text-align: center;
     padding: 16px;
     background-color:#b53f3f;
@@ -39,7 +40,7 @@
 }
 
 .TextFilePicker-FileName {
-    background-color: #419444;
+    background: linear-gradient(to bottom, rgb(110, 152, 78) 0%, rgb(45, 82, 15) 100%);
     margin: 0.2em 0em;
     padding: 0.8em 0em;
     color: white;
@@ -47,5 +48,5 @@
 }
 
 .TextFilePicker-FileName.noFile {
-    background-color: #772100;
+    background: linear-gradient(to bottom, rgba(169,3,41,1) 0%, rgba(143,2,34,1) 44%, rgba(109,0,25,1) 100%);
 }
