--- a/src/components/TextFilePicker/TextFilePicker.css
+++ b/src/components/TextFilePicker/TextFilePicker.css
@@ -5,8 +5,15 @@
     min-width: 260px;
     text-align: center;
     padding: 16px;
-    background-color:#b53f3f;
     overflow: hidden;
+}
+
+.red.TextFilePicker-Body {
+    background-color:#b53f3f;
+}
+
+.green.TextFilePicker-Body {
+    background-color:#487b48;
 }
 
 .TextFilePicker-FileInput .hidden {
@@ -36,15 +43,29 @@
     width: 100%;
     padding: 15px;
     box-sizing: content-box;
+}
+
+.red .TextFilePicker-FileContent {
     background-color: #ffc4c4;
 }
 
+.green .TextFilePicker-FileContent {
+    background-color: #b7d6a0;
+}
+
 .TextFilePicker-FileName {
-    background: linear-gradient(to bottom, rgb(110, 152, 78) 0%, rgb(45, 82, 15) 100%);
     margin: 0.2em 0em;
     padding: 0.8em 0em;
     color: white;
     font-weight: bold;
+}
+
+.red .TextFilePicker-FileName {
+    background: linear-gradient(to bottom, rgba(169,3,41,1) 0%, rgba(143,2,34,1) 44%, rgba(109,0,25,1) 100%);
+}
+
+.green .TextFilePicker-FileName {
+    background: linear-gradient(to bottom, rgb(110, 152, 78) 0%, rgb(45, 82, 15) 100%);
 }
 
 .TextFilePicker-FileName.noFile {
