--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,3 +1,19 @@
 .App {
   display: inline-flex;
+  width: 100vw;
+  height: 100vh;
+}
+
+.App-DataImport {
+  width: 25vw;
+  padding: 1em;
+}
+
+.App-FilePreview {
+  height: 20vh;
+}
+
+.App-CalculateButton {
+  width: 100%;
+  margin-top: 5em;
 }
