--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -15,5 +15,10 @@
 
 .App-CalculateButton {
   width: 100%;
-  margin-top: 5em;
+  margin-top: 2em;
+}
+
+.App-ResultsDisplayAndExport {
+  width: 40vw;
+  padding: 1em;
 }
