--- a/src/components/File/FileImport.css
+++ b/src/components/File/FileImport.css
@@ -12,4 +12,6 @@
 
 .FileImport-Button {
     width: 100%;
+    box-shadow: 0px -5px 20px 0px rgba(0,0,0,0.7);
+    border-radius: 10px 10px 0px 0px;
 }
