--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  box-shadow: 0px 10px 32px 0px rgba(0,0,0,0.7);
+  border: 0px solid #000000;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .button.small {
