--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,12 @@ body {
   color: #ffffff;
 }
 
+.button.disabled {
+  background: radial-gradient(ellipse at center, #6d6d6d 0%,#6b6b6b 100%);
+  color: #989898;
+  cursor: not-allowed;
+}
+
 /* ---- AREA ---- */
 .area {
   padding: 1em 0em;
@@ -43,6 +49,11 @@ body {
 .area.failure {
   background-color: #ffc4c4;
   color: #cf0404;
+}
+
+.area.disabled {
+  background-color: #d8d8d8;
+  color: #a2a2a2;
 }
 
 /* ---- CONTENT ---- */
