--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,7 +1,7 @@
 .App {
   display: inline-flex;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .App-MainFlexBox {
@@ -9,8 +9,8 @@
 }
 
 .App-DataImport {
-  min-width: 210px;
-  max-width: 300px;
+  min-width: 310px;
+  max-width: 350px;
   padding: 1em;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .App-ResultsDisplayAndExport {
-  width: 100%;
-  height: 90vh;
-  padding: 1em;
+  width: 70%;
+  /* height: 90vh; */
+  padding: 1em 1em 1em 0em;
 }
